--- a/templates/register.html
+++ b/templates/register.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Document</title>
-    <link rel="stylesheet" href="css/style.css" />
+    <title>Register</title>
+    <link rel="stylesheet" href="{% static 'css/style.css' %}"/>
   </head>
   <body>
     <header>
@@ -17,11 +17,12 @@
         </ul>
 
         <ul>
-          <li><a href="#">Start</a></li>
-          <li><a href="#">O co chodzi?</a></li>
-          <li><a href="#">O nas</a></li>
-          <li><a href="#">Fundacje i organizacje</a></li>
-          <li><a href="#">Kontakt</a></li>
+          <li><a href="" class="btn btn--small btn--without-border active">Start</a></li>
+          <li><a href="#steps" class="btn btn--small btn--without-border">O co chodzi?</a></li>
+          <li><a href="#about-us" class="btn btn--small btn--without-border">O nas</a></li>
+          <li><a href="#help" class="btn btn--small btn--without-border">Fundacje i organizacje</a></li>
+          <li><a href="form.html" class="btn btn--small btn--without-border">Przekaż dary</a></li>
+          <li><a href="#contact" class="btn btn--small btn--without-border">Kontakt</a></li>
         </ul>
       </nav>
     </header>
@@ -78,12 +79,8 @@
       <div class="bottom-line">
         <span class="bottom-line--copy">Copyright &copy; 2018</span>
         <div class="bottom-line--icons">
-          <a href="#" class="btn btn--small"
-            ><img src="images/icon-facebook.svg"
-          /></a>
-          <a href="#" class="btn btn--small"
-            ><img src="images/icon-instagram.svg"
-          /></a>
+          <a href="#" class="btn btn--small"><img src="{% static 'images/icon-facebook.svg' %}"/></a>
+          <a href="#" class="btn btn--small"><img src="{% static 'images/icon-instagram.svg' %}"/></a>
         </div>
       </div>
     </footer>
