--- a/templates/index.html
+++ b/templates/index.html
@@ -22,7 +22,7 @@
         </div>
 
         <div class="stats--item">
-          <em>{{ organisations_count }}</em>
+          <em>{{ organizations_count }}</em>
           <h3>Wspartych organizacji</h3>
           <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laboriosam magnam, sint nihil cupiditate quas quam.</p>
         </div>
