--- a/templates/login.html
+++ b/templates/login.html
@@ -17,16 +17,14 @@
         </ul>
 
         <ul>
-           <li><a href="" class="btn btn--small btn--without-border active">Start</a></li>
-          <li><a href="#steps" class="btn btn--small btn--without-border">O co chodzi?</a></li>
-          <li><a href="#about-us" class="btn btn--small btn--without-border">O nas</a></li>
-          <li><a href="#help" class="btn btn--small btn--without-border">Fundacje i organizacje</a></li>
-          <li><a href="form.html" class="btn btn--small btn--without-border">Przekaż dary</a></li>
-          <li><a href="#contact" class="btn btn--small btn--without-border">Kontakt</a></li>
+          <li><a href="{% url 'LandingPage' %}" class="btn btn--without-border active">Start</a></li>
+          <li><a href="{% url 'LandingPage' %}#steps" class="btn btn--without-border">O co chodzi?</a></li>
+          <li><a href="{% url 'LandingPage' %}#about-us" class="btn btn--without-border">O nas</a></li>
+          <li><a href="{% url 'LandingPage' %}#help" class="btn btn--without-border">Fundacje i organizacje</a></li>
+          <li><a href="{% url 'LandingPage' %}#contact" class="btn btn--without-border">Kontakt</a></li>
         </ul>
       </nav>
     </header>
-
     <section class="login-page">
       <h2>Zaloguj się</h2>
       <form>
@@ -44,7 +42,6 @@
         </div>
       </form>
     </section>
-
     <footer>
         <div class="contact">
           <h2>Skontaktuj się z nami</h2>
@@ -56,12 +53,12 @@
             <div class="form-group form-group--50">
               <input type="text" name="surname" placeholder="Nazwisko" />
             </div>
-  
+
             <div class="form-group">
               <textarea name="message" placeholder="Wiadomość" rows="1"></textarea>
             </div>
-  
-            <button class="btn" type="submit">Wyślij</button> 
+
+            <button class="btn" type="submit">Wyślij</button>
           </form>
         </div>
         <div class="bottom-line">
