--- a/templates/register.html
+++ b/templates/register.html
@@ -17,40 +17,55 @@
         </ul>
 
         <ul>
-          <li><a href="" class="btn btn--small btn--without-border active">Start</a></li>
-          <li><a href="#steps" class="btn btn--small btn--without-border">O co chodzi?</a></li>
-          <li><a href="#about-us" class="btn btn--small btn--without-border">O nas</a></li>
-          <li><a href="#help" class="btn btn--small btn--without-border">Fundacje i organizacje</a></li>
-          <li><a href="form.html" class="btn btn--small btn--without-border">Przekaż dary</a></li>
-          <li><a href="#contact" class="btn btn--small btn--without-border">Kontakt</a></li>
+          <li><a href="{% url 'LandingPage' %}" class="btn btn--without-border active">Start</a></li>
+          <li><a href="{% url 'LandingPage' %}#steps" class="btn btn--without-border">O co chodzi?</a></li>
+          <li><a href="{% url 'LandingPage' %}#about-us" class="btn btn--without-border">O nas</a></li>
+          <li><a href="{% url 'LandingPage' %}#help" class="btn btn--without-border">Fundacje i organizacje</a></li>
+          <li><a href="{% url 'LandingPage' %}#contact" class="btn btn--without-border">Kontakt</a></li>
         </ul>
       </nav>
     </header>
 
     <section class="login-page">
-      <h2>Załóż konto</h2>
-      <form>
+    <h2>Załóż konto</h2>
+    <form method="post">
+        {% csrf_token %}
         <div class="form-group">
-          <input type="text" name="name" placeholder="Imię" />
-        </div>
-         <div class="form-group">
-          <input type="text" name="surname" placeholder="Nazwisko" />
-        </div>
-        <div class="form-group">
-          <input type="email" name="email" placeholder="Email" />
+            <input type="text" name="first_name" placeholder="Imię">
+            {% if form.first_name.errors %}
+                <div class="error">{{ form.first_name.errors }}</div>
+            {% endif %}
         </div>
         <div class="form-group">
-          <input type="password" name="password" placeholder="Hasło" />
+            <input type="text" name="last_name" placeholder="Nazwisko">
+            {% if form.last_name.errors %}
+                <div class="error">{{ form.last_name.errors }}</div>
+            {% endif %}
         </div>
         <div class="form-group">
-          <input type="password" name="password2" placeholder="Powtórz hasło" />
+            <input type="email" name="email" placeholder="Email">
+            {% if form.email.errors %}
+                <div class="error">{{ form.email.errors }}</div>
+            {% endif %}
+        </div>
+        <div class="form-group">
+            <input type="password" name="password" placeholder="Hasło">
+            {% if form.password.errors %}
+                <div class="error">{{ form.password.errors }}</div>
+            {% endif %}
+        </div>
+        <div class="form-group">
+            <input type="password" name="confirm_password" placeholder="Powtórz hasło">
+            {% if form.confirm_password.errors %}
+                <div class="error">{{ form.confirm_password.errors }}</div>
+            {% endif %}
         </div>
 
         <div class="form-group form-group--buttons">
-          <a href="login.html" class="btn btn--without-border">Zaloguj się</a>
-          <button class="btn" type="submit">Załóż konto</button>
+            <a href="login.html" class="btn btn--without-border">Zaloguj się</a>
+            <button class="btn" type="submit">Załóż konto</button>
         </div>
-      </form>
+    </form>
     </section>
 
     <footer>
