--- a/templates/base.html
+++ b/templates/base.html
@@ -15,21 +15,24 @@
       <nav class="container container--70">
           {% if user.is_authenticated %}
                   <div class="dropdown">
-                      <span class="user-greeting">{{ user.username }}</span>
-                      <ul class="dropdown-content">
-                          <li><a href="{% url 'user-info' %}">Profil</a></li>
-                          <li><a href="">Moje Zbiórki</a></li>
-                          <li><a href="">Ustawienia</a></li>
-                          <li><a href="{% url 'logout' %}">Wyloguj</a></li>
-                      </ul>
+                      <ul class="nav--actions">
+                        <li class="logged-user">
+                        Witaj {{ user.first_name }}
+                        <ul class="dropdown">
+                            <li><a href="#">Profil</a></li>
+                            <li><a href="#">Ustawienia</a></li>
+                            <li><a href="{% url 'logout_view' %}">Wyloguj</a></li>
+                        </ul>
+                        </li>
+        </ul>
                   {% if user.is_superuser %}
                       <a href="{% url 'admin:index' %}" class="btn">Panel administracyjny</a>
                   {% endif %}
                   </div>
               {% else %}
                   <ul class="nav--actions">
-                    <li><a class="btn btn--small btn--without-border">Zaloguj</a></li>
-                    <li><a class="btn btn--small btn--highlighted">Załóż konto</a></li>
+                    <li><a href="{% url 'login_view' %}" class="btn btn--small btn--without-border">Zaloguj</a></li>
+                    <li><a href="{% url 'register_view' %}" class="btn btn--small btn--highlighted">Załóż konto</a></li>
                   </ul>
               {% endif %}
           <ul>
@@ -37,7 +40,7 @@
               <li><a href="#steps" class="btn  btn--without-border">O co chodzi?</a></li>
               <li><a href="#about-us" class="btn  btn--without-border">O nas</a></li>
               <li><a href="#help" class="btn  btn--without-border">Fundacje i organizacje</a></li>
-              <li><a href="form.html" class="btn  btn--without-border">Przekaż dary</a></li>
+              <li><a href="{% url 'AddDonation' %}" class="btn  btn--without-border">Przekaż dary</a></li>
               <li><a href="#contact" class="btn  btn--without-border">Kontakt</a></li>
           </ul>
       </nav>
