--- a/templates/form.html
+++ b/templates/form.html
@@ -13,22 +13,22 @@
       <nav class="container container--70">
         <ul class="nav--actions">
           <li class="logged-user">
-            Witaj Agata
+            Witaj {{ user.first_name }}
             <ul class="dropdown">
               <li><a href="#">Profil</a></li>
               <li><a href="#">Ustawienia</a></li>
-              <li><a href="#">Wyloguj</a></li>
+              <li><a href="{% url 'logout_view' %}">Wyloguj</a></li>
             </ul>
           </li>
         </ul>
 
         <ul>
-          <li><a href="index.html" class="btn btn--without-border active">Start</a></li>
-          <li><a href="index.html#steps" class="btn btn--without-border">O co chodzi?</a></li>
-          <li><a href="index.html#about-us" class="btn btn--without-border">O nas</a></li>
-          <li><a href="index.html#help" class="btn btn--without-border">Fundacje i organizacje</a></li>
-          <li><a href="form.html" class="btn btn--without-border">Przekaż dary</a></li>
-          <li><a href="index.html#contact" class="btn btn--without-border">Kontakt</a></li>
+          <li><a href="{% url 'LandingPage' %}" class="btn btn--without-border active">Start</a></li>
+          <li><a href="{% url 'LandingPage' %}#steps" class="btn btn--without-border">O co chodzi?</a></li>
+          <li><a href="{% url 'LandingPage' %}#about-us" class="btn btn--without-border">O nas</a></li>
+          <li><a href="{% url 'LandingPage' %}#help" class="btn btn--without-border">Fundacje i organizacje</a></li>
+          <li><a href="{% url 'AddDonation' %}" class="btn  btn--without-border">Przekaż dary</a></li>
+          <li><a href="{% url 'LandingPage' %}#contact" class="btn btn--without-border">Kontakt</a></li>
         </ul>
       </nav>
 
