--- a/templates/login.html
+++ b/templates/login.html
@@ -6,14 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Login</title>
-    <link rel="stylesheet" href="{% static 'css/style.css' %}"/>
+    <link rel="stylesheet" href="{% static 'css/style.css' %}" />
   </head>
   <body>
     <header>
       <nav class="container container--70">
         <ul class="nav--actions">
-          <li><a href="#">Zaloguj</a></li>
-          <li class="highlighted"><a href="#">Załóż konto</a></li>
+          <li><a href="{% url 'login_view' %}" class="btn btn--small btn--without-border">Zaloguj</a></li>
+          <li><a href="{% url 'register_view' %}" class="btn btn--small btn--highlighted">Załóż konto</a></li>
         </ul>
 
         <ul>
@@ -27,47 +27,58 @@
     </header>
     <section class="login-page">
       <h2>Zaloguj się</h2>
-      <form>
-        <div class="form-group">
-          <input type="email" name="email" placeholder="Email" />
+      <form method="post">
+    {% csrf_token %}
+    {% if form.errors %}
+        <div class="error-message">
+            {% for field, error_list in form.errors.items %}
+                {% for error in error_list %}
+                    <p>{{ error }}</p>
+                {% endfor %}
+            {% endfor %}
         </div>
-        <div class="form-group">
-          <input type="password" name="password" placeholder="Hasło" />
-          <a href="#" class="btn btn--small btn--without-border reset-password">Przypomnij hasło</a>
-        </div>
+    {% endif %}
+    <div class="form-group">
+        <input type="email" name="email" placeholder="Email">
+    </div>
+    <div class="form-group">
+        <input type="password" name="password" placeholder="Hasło">
+        <a href="#" class="btn btn--small btn--without-border reset-password">Przypomnij hasło</a>
+    </div>
 
-        <div class="form-group form-group--buttons">
-          <a href="#" class="btn btn--without-border">Załóż konto</a>      
-          <button class="btn" type="submit">Zaloguj się</button> 
-        </div>
-      </form>
+    <div class="form-group form-group--buttons">
+        <a href="{% url 'register_view' %}" class="btn btn--without-border">Załóż konto</a>
+        <button class="btn" type="submit">Zaloguj się</button>
+    </div>
+</form>
+
     </section>
     <footer>
-        <div class="contact">
-          <h2>Skontaktuj się z nami</h2>
-          <h3>Formularz kontaktowy</h3>
-          <form>
-            <div class="form-group form-group--50">
-              <input type="text" name="name" placeholder="Imię" />
-            </div>
-            <div class="form-group form-group--50">
-              <input type="text" name="surname" placeholder="Nazwisko" />
-            </div>
-
-            <div class="form-group">
-              <textarea name="message" placeholder="Wiadomość" rows="1"></textarea>
-            </div>
-
-            <button class="btn" type="submit">Wyślij</button>
-          </form>
-        </div>
-        <div class="bottom-line">
-          <span class="bottom-line--copy">Copyright &copy; 2018</span>
-          <div class="bottom-line--icons">
-            <a href="#" class="btn btn--small"><img src="{% static 'images/icon-facebook.svg' %}"/></a>
-            <a href="#" class="btn btn--small"><img src="{% static 'images/icon-instagram.svg' %}"/></a>
+      <div class="contact">
+        <h2>Skontaktuj się z nami</h2>
+        <h3>Formularz kontaktowy</h3>
+        <form>
+          <div class="form-group form-group--50">
+            <input type="text" name="name" placeholder="Imię" />
           </div>
+          <div class="form-group form-group--50">
+            <input type="text" name="surname" placeholder="Nazwisko" />
+          </div>
+
+          <div class="form-group">
+            <textarea name="message" placeholder="Wiadomość" rows="1"></textarea>
+          </div>
+
+          <button class="btn" type="submit">Wyślij</button>
+        </form>
+      </div>
+      <div class="bottom-line">
+        <span class="bottom-line--copy">Copyright &copy; 2018</span>
+        <div class="bottom-line--icons">
+          <a href="#" class="btn btn--small"><img src="{% static 'images/icon-facebook.svg' %}" /></a>
+          <a href="#" class="btn btn--small"><img src="{% static 'images/icon-instagram.svg' %}" /></a>
         </div>
-      </footer>
+      </div>
+    </footer>
   </body>
 </html>
