--- a/templates/register.html
+++ b/templates/register.html
@@ -12,8 +12,8 @@
     <header>
       <nav class="container container--70">
         <ul class="nav--actions">
-          <li><a href="#">Zaloguj</a></li>
-          <li class="highlighted"><a href="#">Załóż konto</a></li>
+          <li><a href="{% url 'login_view' %}" class="btn btn--small btn--without-border">Zaloguj</a></li>
+            <li><a href="{% url 'register_view' %}" class="btn btn--small btn--highlighted">Załóż konto</a></li>
         </ul>
 
         <ul>
@@ -26,47 +26,33 @@
       </nav>
     </header>
 
-    <section class="login-page">
-    <h2>Załóż konto</h2>
-    <form method="post">
-        {% csrf_token %}
+     <section class="login-page">
+        <h2>Załóż konto</h2>
+        <form method="post">
+          {% csrf_token %}
         <div class="form-group">
-            <input type="text" name="first_name" placeholder="Imię">
-            {% if form.first_name.errors %}
-                <div class="error">{{ form.first_name.errors }}</div>
-            {% endif %}
+          <input type="text" name="name" placeholder="Imię" />
+        </div>
+         <div class="form-group">
+          <input type="text" name="surname" placeholder="Nazwisko" />
         </div>
         <div class="form-group">
-            <input type="text" name="last_name" placeholder="Nazwisko">
-            {% if form.last_name.errors %}
-                <div class="error">{{ form.last_name.errors }}</div>
-            {% endif %}
+          <input type="email" name="email" placeholder="Email" />
         </div>
         <div class="form-group">
-            <input type="email" name="email" placeholder="Email">
-            {% if form.email.errors %}
-                <div class="error">{{ form.email.errors }}</div>
-            {% endif %}
+          <input type="password" name="password" placeholder="Hasło" />
         </div>
         <div class="form-group">
-            <input type="password" name="password" placeholder="Hasło">
-            {% if form.password.errors %}
-                <div class="error">{{ form.password.errors }}</div>
-            {% endif %}
-        </div>
-        <div class="form-group">
-            <input type="password" name="confirm_password" placeholder="Powtórz hasło">
-            {% if form.confirm_password.errors %}
-                <div class="error">{{ form.confirm_password.errors }}</div>
-            {% endif %}
+          <input type="password" name="password2" placeholder="Powtórz hasło" />
         </div>
 
         <div class="form-group form-group--buttons">
-            <a href="login.html" class="btn btn--without-border">Zaloguj się</a>
-            <button class="btn" type="submit">Załóż konto</button>
+          <a href="login_view" class="btn btn--without-border">Zaloguj się</a>
+          <button class="btn" type="submit">Załóż konto</button>
         </div>
-    </form>
-    </section>
+      </form>
+        </section>
+
 
     <footer>
       <div class="contact">
