--- a/templates/base.html
+++ b/templates/base.html
@@ -40,7 +40,11 @@
               <li><a href="#steps" class="btn  btn--without-border">O co chodzi?</a></li>
               <li><a href="#about-us" class="btn  btn--without-border">O nas</a></li>
               <li><a href="#help" class="btn  btn--without-border">Fundacje i organizacje</a></li>
-              <li><a href="{% url 'AddDonation' %}" class="btn  btn--without-border">Przekaż dary</a></li>
+              {% if user.is_authenticated %}
+                <li><a href="{% url 'AddDonation' %}" class="btn  btn--without-border">Przekaż dary</a></li>
+                {% else %}
+                <li><a href="{% url 'login_view' %}" class="btn  btn--without-border">Przekaż dary</a></li>
+              {% endif %}
               <li><a href="#contact" class="btn  btn--without-border">Kontakt</a></li>
           </ul>
       </nav>
@@ -71,5 +75,6 @@
       </div>
     </footer>
 {% endblock %}
+
 </body>
 </html>
