--- a/templates/form.html
+++ b/templates/form.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Document</title>
     <link rel="stylesheet" href="{% static 'css/style.css' %}"/>
+    <script src="{% static 'js/app.js' %}"></script>
   </head>
   <body>
     <header class="header--form-page">
@@ -86,26 +87,27 @@
         <form action="form-confirmation.html" method="post">
           <!-- STEP 1: class .active is switching steps -->
           <div data-step="1" class="active">
-            <h3>Zaznacz co chcesz oddać:</h3>
+          <h3>Zaznacz co chcesz oddać:</h3>
 
-            {% for category in categories %}
-            <div class="form-group form-group--checkbox">
+          {% for category in categories %}
+          <div class="form-group form-group--checkbox">
             <label>
               <input
                 type="checkbox"
                 name="categories"
                 value="{{ category.name }}"
               />
-              <span class="checkbox"></span>
-              <span class="description">{{ category.name }}</span>
+            <span class="checkbox"></span>
+            <span class="description">{{ category.name }}</span>
             </label>
-            </div>
-            {% endfor %}
+          </div>
+          {% endfor %}
 
             <div class="form-group form-group--buttons">
               <button type="button" class="btn next-step">Dalej</button>
             </div>
-          </div>
+            </div>
+
 
           <!-- STEP 2 -->
           <div data-step="2">
@@ -124,47 +126,28 @@
             </div>
           </div>
 
-
-
-          <!-- STEP 4 -->
+          <!-- STEP 3 -->
           <div data-step="3">
-            <h3>Wybierz organizacje, której chcesz pomóc:</h3>
-
-            <div class="form-group form-group--checkbox">
-              <label>
-                <input type="radio" name="organization" value="old" />
-                <span class="checkbox radio"></span>
-                <span class="description">
-                  <div class="title">Fundacja “Bez domu”</div>
-                  <div class="subtitle">
-                    Cel i misja: Pomoc dla osób nie posiadających miejsca
-                    zamieszkania
-                  </div>
-                </span>
-              </label>
-            </div>
-
-            <div class="form-group form-group--checkbox">
-              <label>
-                <input type="radio" name="organization" value="old" />
-                <span class="checkbox radio"></span>
-                <span class="description">
-                  <div class="title">Fundacja “Dla dzieci"</div>
-                  <div class="subtitle">
-                    Cel i misja: Pomoc osobom znajdującym się w trudnej sytuacji
-                    życiowej.
-                  </div>
-                </span>
-              </label>
-            </div>
-
-            <div class="form-group form-group--buttons">
+          <h3>Wybierz organizacje, której chcesz pomóc:</h3>
+            {% for institution in institutions %}
+          <div class="form-group form-group--checkbox">
+            <label>
+              <input type="checkbox" name="organization" value="{{ institution.name }}" />
+              <span class="checkbox"></span>
+              <span class="description">
+              <div class="title">{{ institution.name }}</div>
+              <div class="subtitle">{{ institution.description }}</div>
+              </span>
+            </label>
+          </div>
+          {% endfor %}
+          <div class="form-group form-group--buttons">
               <button type="button" class="btn prev-step">Wstecz</button>
               <button type="button" class="btn next-step">Dalej</button>
-            </div>
           </div>
+        </div>
 
-          <!-- STEP 5 -->
+          <!-- STEP 4 -->
           <div data-step="4">
             <h3>Podaj adres oraz termin odbioru rzecz przez kuriera:</h3>
 
@@ -216,7 +199,7 @@
             </div>
           </div>
 
-          <!-- STEP 6 -->
+          <!-- STEP 5 -->
           <div data-step="5">
             <h3>Podsumowanie Twojej darowizny</h3>
 
@@ -305,6 +288,5 @@
       </div>
     </footer>
 
-    <script src="js/app.js"></script>
   </body>
 </html>
