--- a/templates/form.html
+++ b/templates/form.html
@@ -86,27 +86,23 @@
 
         <form action="form-confirmation.html" method="post">
           <!-- STEP 1: class .active is switching steps -->
-          <div data-step="1" class="active">
-          <h3>Zaznacz co chcesz oddać:</h3>
+        <div data-step="1" class="active">
+        <h3>Zaznacz co chcesz oddać:</h3>
 
-          {% for category in categories %}
-          <div class="form-group form-group--checkbox">
-            <label>
-              <input
-                type="checkbox"
-                name="categories"
-                value="{{ category.name }}"
-              />
+        {% for category in categories %}
+        <div class="form-group form-group--checkbox">
+          <label>
+            <input type="checkbox" name="categories" value="{{ category.name }}" />
             <span class="checkbox"></span>
             <span class="description">{{ category.name }}</span>
-            </label>
-          </div>
-          {% endfor %}
+          </label>
+        </div>
+        {% endfor %}
 
-            <div class="form-group form-group--buttons">
-              <button type="button" class="btn next-step">Dalej</button>
-            </div>
-            </div>
+        <div class="form-group form-group--buttons">
+          <button type="button" class="btn next-step">Dalej</button>
+        </div>
+        </div>
 
 
           <!-- STEP 2 -->
@@ -126,26 +122,27 @@
             </div>
           </div>
 
-          <!-- STEP 3 -->
-          <div data-step="3">
-          <h3>Wybierz organizacje, której chcesz pomóc:</h3>
-            {% for institution in institutions %}
-          <div class="form-group form-group--checkbox">
-            <label>
-              <input type="checkbox" name="organization" value="{{ institution.name }}" />
-              <span class="checkbox"></span>
-              <span class="description">
+        <!-- STEP 3 -->
+        <div data-step="3">
+        <h3>Wybierz organizacje, której chcesz pomóc:</h3>
+        {% for institution in institutions %}
+        <div class="form-group form-group--checkbox" data-categories="{% for category in institution.categories.all %}{{ category.name }}{% if not forloop.last %},{% endif %}{% endfor %}">
+          <label>
+            <input type="checkbox" name="organization" value="{{ institution.name }}" />
+            <span class="checkbox"></span>
+            <span class="description">
               <div class="title">{{ institution.name }}</div>
               <div class="subtitle">{{ institution.description }}</div>
-              </span>
-            </label>
-          </div>
-          {% endfor %}
-          <div class="form-group form-group--buttons">
-              <button type="button" class="btn prev-step">Wstecz</button>
-              <button type="button" class="btn next-step">Dalej</button>
-          </div>
+            </span>
+          </label>
         </div>
+        {% endfor %}
+        <div class="form-group form-group--buttons">
+          <button type="button" class="btn prev-step">Wstecz</button>
+          <button type="button" class="btn next-step">Dalej</button>
+        </div>
+      </div>
+
 
           <!-- STEP 4 -->
           <div data-step="4">
