--- a/templates/form.html
+++ b/templates/form.html
@@ -84,7 +84,7 @@
       <div class="form--steps-container">
         <div class="form--steps-counter">Krok <span>1</span>/5</div>
 
-        <form action="form-confirmation.html" method="post">
+        <form action="/add_donation/" method="post">
           <!-- STEP 1: class .active is switching steps -->
         <div data-step="1" class="active">
         <h3>Zaznacz co chcesz oddać:</h3>
@@ -197,56 +197,52 @@
           </div>
 
           <!-- STEP 5 -->
-          <div data-step="5">
-            <h3>Podsumowanie Twojej darowizny</h3>
+          <div data-step="5" class="active">
+          <h3>Podsumowanie Twojej darowizny</h3>
 
-            <div class="summary">
-              <div class="form-section">
-                <h4>Oddajesz:</h4>
-                <ul>
-                  <li>
-                    <span class="icon icon-bag"></span>
-                    <span class="summary--text"
-                      >4 worki ubrań w dobrym stanie dla dzieci</span
-                    >
-                  </li>
-
-                  <li>
-                    <span class="icon icon-hand"></span>
-                    <span class="summary--text"
-                      >Dla fundacji "Mam marzenie" w Warszawie</span
-                    >
-                  </li>
-                </ul>
-              </div>
-
-              <div class="form-section form-section--columns">
-                <div class="form-section--column">
-                  <h4>Adres odbioru:</h4>
-                  <ul>
-                    <li>Prosta 51</li>
-                    <li>Warszawa</li>
-                    <li>99-098</li>
-                    <li>123 456 789</li>
-                  </ul>
-                </div>
-
-                <div class="form-section--column">
-                  <h4>Termin odbioru:</h4>
-                  <ul>
-                    <li>13/12/2018</li>
-                    <li>15:40</li>
-                    <li>Brak uwag</li>
-                  </ul>
-                </div>
-              </div>
-            </div>
-
-            <div class="form-group form-group--buttons">
-              <button type="button" class="btn prev-step">Wstecz</button>
-              <button type="submit" class="btn">Potwierdzam</button>
-            </div>
+          <div class="summary">
+          <div class="form-section">
+            <h4>Oddajesz:</h4>
+            <ul>
+              <li>
+                <span class="icon icon-bag"></span>
+                <span id="summary-bags" class="summary--text">...</span>
+              </li>
+              <li>
+                <span class="icon icon-hand"></span>
+                <span id="summary-organization" class="summary--text">...</span>
+              </li>
+            </ul>
           </div>
+
+          <div class="form-section form-section--columns">
+            <div class="form-section--column">
+          <h4>Adres odbioru:</h4>
+          <ul>
+            <li id="summary-address">...</li>
+            <li id="summary-city">...</li>
+            <li id="summary-postcode">...</li>
+            <li id="summary-phone">...</li>
+          </ul>
+          </div>
+
+          <div class="form-section--column">
+            <h4>Termin odbioru:</h4>
+            <ul>
+              <li id="summary-date">...</li>
+              <li id="summary-time">...</li>
+              <li id="summary-more-info">...</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+
+      <div class="form-group form-group--buttons">
+        <button type="button" class="btn prev-step">Wstecz</button>
+        <button type="submit" class="btn">Potwierdzam</button>
+      </div>
+    </div>
+
         </form>
       </div>
     </section>
