--- a/templates/base.html
+++ b/templates/base.html
@@ -21,13 +21,14 @@
                         <ul class="dropdown">
                             <li><a href="#">Profil</a></li>
                             <li><a href="#">Ustawienia</a></li>
+                            {% if user.is_superuser %}
+                            <li><a href="{% url 'admin:index' %}">Panel administracyjny</a></li>
+                            {% endif %}
                             <li><a href="{% url 'logout_view' %}">Wyloguj</a></li>
                         </ul>
                         </li>
                       </ul>
-                  {% if user.is_superuser %}
-                      <a href="{% url 'admin:index' %}" class="btn">Panel administracyjny</a>
-                  {% endif %}
+
                   </div>
               {% else %}
                   <ul class="nav--actions">
