--- a/templates/form.html
+++ b/templates/form.html
@@ -18,6 +18,9 @@
             <ul class="dropdown">
               <li><a href="#">Profil</a></li>
               <li><a href="#">Ustawienia</a></li>
+              {% if user.is_superuser %}
+              <li><a href="{% url 'admin:index' %}">Panel administracyjny</a></li>
+              {% endif %}
               <li><a href="{% url 'logout_view' %}">Wyloguj</a></li>
             </ul>
           </li>
