--- a/templates/form-confirmation.html
+++ b/templates/form-confirmation.html
@@ -15,7 +15,11 @@
                   <div class="dropdown">
                       <ul class="nav--actions">
                         <li class="logged-user">
+                        {% if user.is_superuser %}
+                        Witaj Superuser {{ user.username }}
+                        {% else %}
                         Witaj {{ user.first_name }}
+                        {% endif %}
                         <ul class="dropdown">
                             <li><a href="{% url 'profile' %}">Profil</a></li>
                             <li><a href="{% url 'settings' %}">Ustawienia</a></li>
