--- a/templates/form.html
+++ b/templates/form.html
@@ -14,7 +14,11 @@
       <nav class="container container--70">
         <ul class="nav--actions">
           <li class="logged-user">
+            {% if user.is_superuser %}
+            Witaj Superuser {{ user.username }}
+            {% else %}
             Witaj {{ user.first_name }}
+            {% endif %}
             <ul class="dropdown">
               <li><a href="{% url 'profile' %}">Profil</a></li>
               <li><a href="{% url 'settings' %}">Ustawienia</a></li>
