--- a/templates/user-profile.html
+++ b/templates/user-profile.html
@@ -14,7 +14,11 @@
       <nav class="container container--70">
         <ul class="nav--actions">
           <li class="logged-user">
-            Witaj {{ user.first_name }}
+            {% if user.is_superuser %}
+              Witaj Superuser {{ user.username }}
+              {% else %}
+              Witaj {{ user.first_name }}
+              {% endif %}
             <ul class="dropdown">
               <li><a href="{% url 'profile' %}">Profil</a></li>
               <li><a href="{% url 'settings' %}">Ustawienia</a></li>
@@ -73,6 +77,7 @@
                 <h1>Data odbioru: {{ donation.pick_up_date }}</h1>
                 <form  method="post" action="{% url 'take_donation' donation.id %}">
                     {% csrf_token %}
+                    <input type="hidden" name="donation_id" value="{{ donation.id }}">
                     <button class="btn  btn--without-border active" type="submit">Oznacz jako zabrane</button>
                 </form>
             </li>
@@ -83,6 +88,7 @@
     </ul>
 </section>
 
+<!-- Sekcja dla "Przekazanych darów" -->
 <section class="form--steps-container">
     <h2>Przekazane dary:</h2>
     <ul>
@@ -101,6 +107,7 @@
                     <h1>Data odbioru: {{ donation.pick_up_date }}</h1>
                     <form  method="post" action="{% url 'take_donation' donation.id %}">
                         {% csrf_token %}
+                        <input type="hidden" name="donation_id" value="{{ donation.id }}">
                         <button class="btn  btn--without-border active" type="submit">Oznacz jako niezabrane</button>
                     </form>
                 </li>
