--- a/templates/user-profile.html
+++ b/templates/user-profile.html
@@ -116,7 +116,7 @@
                 <li>Brak przekazanych darów.</li>
             {% endfor %}
         {% else %}
-            <li>Brak przekazanych darów.</li>
+            <li>Brak odebranych darów.</li>
         {% endif %}
     </ul>
 </section>
